syntax = "proto3";

package user;

option go_package = "github.com/gururuby/shortener/internal/grpc/user";

service UserService {
    rpc GetURLs(GetURLsRequest) returns (GetURLsResponse);
    rpc DeleteURLs(DeleteURLsRequest) returns (DeleteURLsResponse);
}

message GetURLsRequest {
    string auth_token = 1;
}

message GetURLsResponse {
    repeated UserURL urls = 1;
    string error = 2;
}

message UserURL {
    string short_url = 1;
    string original_url = 2;
}

message DeleteURLsRequest {
    string auth_token = 1;
    repeated string aliases = 2;
}

message DeleteURLsResponse {
    bool success = 1;
    string error = 2;
}